# chevel-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  chevel_main.py  pyproject.toml  requirements-hardware.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
controllers/: __init__.py  auto_controller.py  comm_controller.py  dume_controller.py  iot_controller.py  os_controller.py  robot_controller.py
core/: __init__.py  cognitive_core.py  decision_engine.py  fast_thinking.py  goal_system.py  intent_processor.py  learning_system.py  llm_engine.py  memory_advanced.py  memory_system.py  personality.py  self_monitor.py  task_reasoning.py  world_model.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  DUME_BRIDGE.md  ROBOT_ARM.md  SAFETY_MODEL.md  UNIVERSAL_SCOPE.md
interfaces/: __init__.py
native/: CMakeLists.txt  chevel_core.cpp  chevel_native.cpp
native/chevel-rocket/: CMakeLists.txt  main.cpp
native/chevel-rocket/qml/: Main.qml
native/chevel-rocket/qml/components/: RocketButton.qml  RocketSegmentedToggle.qml  RocketStatusPill.qml
scripts/: audit_project.ps1  build_cpp_service.ps1  build_native.ps1  install_portable_cpp.ps1  install_toolchain_windows.ps1  prepare_logo.py  run_tests.ps1  setup_windows.ps1  start_chevel.ps1
tests/: test_chat_optional.py  test_cognitive_upgrade.py  test_config_manager.py  test_dume_bridge.py  test_frontend_static.py  test_intent.py  test_memory.py  test_native_bridge.py  test_public_scope_files.py  test_robot_controller.py  test_security.py  test_system.py  test_voice.py
(+31 files in other folders)
